# ai-document-rag-chat

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json  tsconfig.base.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/api/v1/: api.py
apps/api/app/api/v1/endpoints/: __init__.py  analytics.py  auth.py  chat.py  documents.py  history.py  summary.py  users.py
apps/api/app/core/: dependencies.py  logger.py  security.py
apps/api/app/db/: base.py  init_db.py  models.py  repository.py  session.py
apps/api/app/schemas/: user.py
apps/api/app/services/: analytics_service.py  auth_service.py  chat_chain.py  chat_service.py  document_service.py  embeddings.py  hybrid_search.py  memory_service.py  pdf_service.py  prompt_templates.py  rag_service.py  rerank_service.py  storage.py  summary_service.py  user_service.py  vector_store.py
apps/api/tests/: test_analytics.py  test_chat.py  test_documents.py
apps/web/: package.json  tsconfig.json
apps/web/app/: layout.tsx  not-found.tsx  page.tsx
docs/api/: README.md  auth.md  endpoints.md
docs/architecture/: README.md  diagrams.md  system-overview.md
docs/deployment/: README.md  local.md
infrastructure/docker/: Dockerfile  docker-compose.yml
scripts/: run_backend.sh  run_frontend.sh  setup_dev.sh
(+14 files in other folders)
