[tool.poetry]
name = "ai_document_rag_chat_api"
version = "0.1.0"
description = "FastAPI backend for AI document retrieval and chat."
authors = ["Bhargi777 <noreply@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
uvicorn = "^0.23.0"
sqlmodel = "^0.0.8"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
python-jose = "^3.3.0"
passlib = "^1.7.5"
langchain = "^0.1.0"
openai = "^1.8.0"
httpx = "^0.25.0"
python-multipart = "^0.0.6"
pinecone-client = "^2.2.0"
pypdf = "^4.12.0"
faiss-cpu = { version = "^1.7.4", optional = true }
alembic = "^1.11.1"
pytest = "^8.4.0"
pytest-asyncio = "^0.23.0"

[tool.poetry.extras]
faiss = ["faiss-cpu"]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
